# rwa-platform

./: .gitignore  Anchor.toml  LICENSE  README.md  package.json  tsconfig.json
backend/: .env.example  package.json
backend/src/: index.ts
backend/src/api/: edo.ts  faucet.ts  invoice.ts  kyc.ts  pool.ts  whitelist.ts
backend/src/idl/: rwa_token.json
backend/src/lib/: edo.ts  solana.ts  sumsub.ts
backend/src/webhooks/: sumsub.ts
frontend/: .env.example  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: InvoiceList.tsx  KycOnboarding.tsx  Landing.tsx  WalletStatus.tsx
frontend/src/components/admin/: AdminDashboard.tsx  InvoiceManagement.tsx  PoolManagement.tsx  WhitelistManagement.tsx
frontend/src/components/creditor/: CreditorDashboard.tsx  EdoImport.tsx  SubmitInvoice.tsx
frontend/src/components/investor/: InvestorDashboard.tsx  InvoiceDetail.tsx  InvoiceMarketplace.tsx  Portfolio.tsx
frontend/src/components/shared/: DocumentVerifier.tsx  Header.tsx  RiskBadge.tsx  StatusBadge.tsx  WalletStatus.tsx
frontend/src/hooks/: useInvestorPositions.ts  useInvoice.ts  usePool.ts  useRefresh.ts  useRole.ts  useWhitelist.ts
frontend/src/idl/: rwa_token.json
keys/: README.md  devnet-authority.json
programs/rwa-token/: Cargo.toml
programs/rwa-token/src/: lib.rs
scripts/: init-devnet.ts
tests/: rwa-token.ts
